openapi nft add
